Dommerplan 1.5.2 - Martin Juhl - mj@casalogic.dk
  
  * Tilføjelser til Mobil-site
  * Ny dommer-statistik.. 
  * Tilføjelser til brugerdel
  * Diverse Fixes...

Dommerplan 1.5.1 - Martin Juhl - mj@casalogic.dk
  
  * Tilføjelser til Mobil version
  * Statistik modul til Dommertjanser

Dommerplan 1.5.0 - Martin Juhl - mj@casalogic.dk
  
  * Første Version af Mobil Version..

Dommerplan 1.4.0 - Martin Juhl - mj@casalogic.dk

  * Fix til ICal..

Dommerplan 1.3.9 - Martin Juhl - mj@casalogic.dk

  * Tilføjet mere kampinfo til iCal..
  * Rettet dommerplansintegration..

Dommerplan 1.3.8 - Martin Juhl - mj@casalogic.dk

  * Tilføjet muligheder for søsterklubber..
  * Oprydning i konfiguration..

Dommerplan 1.3.7 - Martin Juhl - mj@casalogic.dk

  * Fixet Debug mode for synkronizeringen...

Dommerplan 1.3.6 - Martin Juhl - mj@casalogic.dk

  * Fixet Kampnummerhentning, Bug fra resultater.basket.dk..
  * Fixet DBBF Dommerhentning...
  * Lagt getClubs og getGame under commonFunctions..

Dommerplan 1.3.3 - Martin Juhl - mj@casalogic.dk

  * Fix så udekampe ikke bliver vist i den normale plan...

Dommerplan 1.3.2 - Martin Juhl - mj@casalogic.dk

  * Fix i sync, så alle info kommer med ved første sync...

Dommerplan 1.3.1 - Martin Juhl - mj@casalogic.dk
 
  * Fixet nulstilling af statistik..

Dommerplan 1.3.0 - Martin Juhl - mj@casalogic.dk

  * Ny menu..
  * Plugin-struktur..

Dommerplan 1.2.3 - Martin Juhl - mj@casalogic.dk

  * Fixet setup.php..

Dommerplan 1.2.2 - Martin Juhl - mj@casalogic.dk

  * Mere plads til længere (hold)navne...
  * Tilføjet "DBBF:" foran DBBF dommere..
  * addgame.php cleanup..
  * addallsources.php cleanup..