@@ -1,3 +1,8 @@
+Dommerplan 1.5.3 - Martin Juhl - mj@casalogic.dk
+
+  * Hover info på statistisk
+  * Fjernet advarsler fra MySQL (tilgængelige i debug-mode)
+
 Dommerplan 1.5.2 - Martin Juhl - mj@casalogic.dk
   
   * Tilføjelser til Mobil-site
